[package]
name = "helios-opstack-server"
version = "0.1.0"
edition = "2024"

[dependencies]
alloy = { version = "0.14.0" }
libp2p = { version = "0.55.0", features = ["macros", "tokio", "tcp", "noise", "gossipsub", "ping"] }
kona-p2p = { git = "https://github.com/op-rs/kona", rev = "b5ac86537439abe49fa65279ec4e1f8eb5f3104c" }
tokio = "1.44.2"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
