[package]
name = "helios-opstack-server"
version = "0.1.0"
edition = "2024"

[dependencies]
alloy = { version = "0.14.0" }
kona-p2p = { git = "https://github.com/op-rs/kona", rev = "b5ac86537439abe49fa65279ec4e1f8eb5f3104c" }
kona-registry = { git = "https://github.com/op-rs/kona", rev = "b5ac86537439abe49fa65279ec4e1f8eb5f3104c" }
op-alloy-rpc-types-engine = "0.14.1"
ethereum_ssz = "0.9"

libp2p = { version = "0.55.0", features = ["macros", "tokio", "tcp", "noise", "gossipsub", "ping"] }
tokio = "1.44.2"
axum = "0.8.3"

tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }

serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.85"
clap = { version = "4.5.4", features = ["derive", "env"] }
