[package]
name = "helios-opstack-server"
version = "0.1.0"
edition = "2024"

[dependencies]
alloy = { version = "0.15.10" }
kona-p2p = { git = "https://github.com/op-rs/kona", rev = "b079a57fcfbb444d051e859f1e80f445daf5a2c7" }
kona-registry = { git = "https://github.com/op-rs/kona", rev = "b079a57fcfbb444d051e859f1e80f445daf5a2c7" }
op-alloy-rpc-types-engine = "0.15.2"
ethereum_ssz = "0.9"

libp2p = { version = "0.55.0", features = ["macros", "tokio", "tcp", "noise", "gossipsub", "ping"] }
discv5 = "0.9.1"
tokio = { version = "1.44.2", features = ["full"] }
axum = "0.8.3"

tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }

serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.85"
clap = { version = "4.5.4", features = ["derive", "env"] }
